これから4個目のボス本格的に作る

--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -176,10 +176,14 @@
     <ClCompile Include="SourceCode\gamesystem\backobj\BackObj.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\AngerStamp.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\AttackNote.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\bossattach\BarrangeCD.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\bossattach\ConfuCD.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\DamageArea.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\bossattach\DebuffCD.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\InterStamp.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\JoyStamp.cpp" />
-    <ClCompile Include="SourceCode\gamesystem\bossattach\CD.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\bossattach\InterCD.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\bossattach\LineCD.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\Predict.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\ShockWave.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\EnemyManager.cpp" />
@@ -315,10 +319,14 @@
     <ClInclude Include="SourceCode\gamesystem\backobj\BackObj.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\AngerStamp.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\AttackNote.h" />
+    <ClInclude Include="SourceCode\gamesystem\bossattach\BarrangeCD.h" />
+    <ClInclude Include="SourceCode\gamesystem\bossattach\ConfuCD.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\DamageArea.h" />
+    <ClInclude Include="SourceCode\gamesystem\bossattach\DebuffCD.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\InterStamp.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\JoyStamp.h" />
-    <ClInclude Include="SourceCode\gamesystem\bossattach\CD.h" />
+    <ClInclude Include="SourceCode\gamesystem\bossattach\InterCD.h" />
+    <ClInclude Include="SourceCode\gamesystem\bossattach\LineCD.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\Predict.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\ShockWave.h" />
     <ClInclude Include="SourceCode\gamesystem\character\EnemyManager.h" />
