--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -428,6 +428,18 @@
     <ClCompile Include="SourceCode\gamesystem\character\ThirdBoss.cpp">
       <Filter>gamesystem\charactor\Boss\Third</Filter>
     </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\Menu\Menu.cpp">
+      <Filter>gamesystem\Menu</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\scene\SelectStageScene.cpp">
+      <Filter>gamesystem</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\actor\SelectSceneActor.cpp">
+      <Filter>gamesystem</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\ui\SelectScene.cpp">
+      <Filter>gamesystem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SourceCode\engine\camera\DebugCamera.h">
@@ -820,6 +832,18 @@
     <ClInclude Include="SourceCode\gamesystem\character\ThirdBoss.h">
       <Filter>gamesystem\charactor\Boss\Third</Filter>
     </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\Menu\Menu.h">
+      <Filter>gamesystem\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\scene\SelectStageScene.h">
+      <Filter>gamesystem</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\actor\SelectSceneActor.h">
+      <Filter>gamesystem</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\ui\SelectScene.h">
+      <Filter>gamesystem</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\Basic.hlsli">
@@ -1126,6 +1150,9 @@
     </Filter>
     <Filter Include="gamesystem\charactor\Boss\Third">
       <UniqueIdentifier>{5764d420-c4d4-4607-b827-3307dd9ddd13}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="gamesystem\Menu">
+      <UniqueIdentifier>{99344b64-4c4f-4a5c-a439-fce455159b0b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
