そろそろコミットしておく

--- a/imgui.ini
+++ b/imgui.ini
@@ -179,7 +179,27 @@ Size=359,328
 Collapsed=0
 
 [Window][AREA]
-Pos=60,60
+Pos=46,212
 Size=135,116
+Collapsed=0
+
+[Window][LINECD]
+Pos=25,34
+Size=110,84
+Collapsed=0
+
+[Window][BARRACD]
+Pos=183,30
+Size=79,48
+Collapsed=0
+
+[Window][CONFUCD]
+Pos=83,146
+Size=79,48
+Collapsed=0
+
+[Window][DEBUFFCD]
+Pos=183,99
+Size=79,48
 Collapsed=0
 
