大きな変更をした際はぜひ他のシーンでも確認お願いします・・・

--- a/imgui.ini
+++ b/imgui.ini
@@ -154,7 +154,7 @@ Size=208,141
 Collapsed=0
 
 [Window][Fourth]
-Pos=265,125
+Pos=204,277
 Size=160,155
 Collapsed=0
 
@@ -176,6 +176,7 @@ Collapsed=0
 [Window][AREA]
 Pos=46,212
 Size=135,116
+Collapsed=0
 
 [Window][post]
 Pos=60,60
