線の当たり判定のバグ、プレイヤーのゴーストを三体分消してくる攻撃の追加

--- a/imgui.ini
+++ b/imgui.ini
@@ -54,7 +54,7 @@ Size=116,239
 Collapsed=0
 
 [Window][Player]
-Pos=47,227
+Pos=23,349
 Size=134,221
 Collapsed=0
 
@@ -201,5 +201,10 @@ Collapsed=0
 [Window][DEBUFFCD]
 Pos=183,99
 Size=79,48
+Collapsed=0
+
+[Window][AERA]
+Pos=60,60
+Size=157,158
 Collapsed=0
 
