一旦エフェクト追加

--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -207,6 +207,7 @@
     <ClCompile Include="SourceCode\gamesystem\effect\BreakEffect.cpp" />
     <ClCompile Include="SourceCode\gamesystem\effect\ConfuEffect.cpp" />
     <ClCompile Include="SourceCode\gamesystem\effect\InterEffect.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\effect\NoteEffect.cpp" />
     <ClCompile Include="SourceCode\gamesystem\gamecamera\CameraWork.cpp" />
     <ClCompile Include="SourceCode\gamesystem\limitline\DownLimit.cpp" />
     <ClCompile Include="SourceCode\gamesystem\limitline\LeftLimit.cpp" />
@@ -355,6 +356,7 @@
     <ClInclude Include="SourceCode\gamesystem\effect\BreakEffect.h" />
     <ClInclude Include="SourceCode\gamesystem\effect\ConfuEffect.h" />
     <ClInclude Include="SourceCode\gamesystem\effect\InterEffect.h" />
+    <ClInclude Include="SourceCode\gamesystem\effect\NoteEffect.h" />
     <ClInclude Include="SourceCode\gamesystem\gamecamera\CameraWork.h" />
     <ClInclude Include="SourceCode\gamesystem\limitline\DownLimit.h" />
     <ClInclude Include="SourceCode\gamesystem\limitline\LeftLimit.h" />
