--- a/imgui.ini
+++ b/imgui.ini
@@ -184,7 +184,7 @@ Size=317,197
 Collapsed=0
 
 [Window][LINECD]
-Pos=25,34
+Pos=126,287
 Size=110,84
 Collapsed=0
 
@@ -211,5 +211,10 @@ Collapsed=0
 [Window][Confu]
 Pos=60,60
 Size=114,65
+Collapsed=0
+
+[Window][NOTEEFFECT]
+Pos=704,359
+Size=162,108
 Collapsed=0
 
