--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -478,6 +478,8 @@
     <ClCompile Include="SourceCode\engine\audio\AudioManager.cpp">
       <Filter>engine\audio</Filter>
     </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\scene\FiveStage.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\actor\FiveSategActor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SourceCode\engine\camera\DebugCamera.h">
@@ -920,6 +922,8 @@
     <ClInclude Include="SourceCode\engine\audio\AudioManager.h">
       <Filter>engine\audio</Filter>
     </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\scene\FiveStage.h" />
+    <ClInclude Include="SourceCode\gamesystem\actor\FiveSategActor.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\Basic.hlsli">
