--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -480,6 +480,16 @@
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\scene\FiveStage.cpp" />
     <ClCompile Include="SourceCode\gamesystem\actor\FiveSategActor.cpp" />
+    <ClCompile Include="DarkBullet.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\scene\SixScene.cpp">
+      <Filter>gamesystem\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\character\SixBoss.cpp">
+      <Filter>gamesystem</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\actor\SixStageActor.cpp">
+      <Filter>gamesystem\scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SourceCode\engine\camera\DebugCamera.h">
@@ -719,9 +729,6 @@
     <ClInclude Include="SourceCode\gamesystem\scene\LoadScene.h">
       <Filter>gamesystem\scene\Load</Filter>
     </ClInclude>
-    <ClInclude Include="SourceCode\gamesystem\scene\GameoverScene.h">
-      <Filter>gamesystem\scene\GameOver</Filter>
-    </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\scene\BaseScene.h">
       <Filter>gamesystem\scene\Base</Filter>
     </ClInclude>
@@ -924,6 +931,16 @@
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\scene\FiveStage.h" />
     <ClInclude Include="SourceCode\gamesystem\actor\FiveSategActor.h" />
+    <ClInclude Include="DarkBullet.h" />
+    <ClInclude Include="SourceCode\gamesystem\scene\SixScene.h">
+      <Filter>gamesystem\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\character\SixBoss.h">
+      <Filter>gamesystem</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\actor\SixStageActor.h">
+      <Filter>gamesystem\scene</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\Basic.hlsli">
@@ -1263,6 +1280,12 @@
     </Filter>
     <Filter Include="gamesystem\effect\Note">
       <UniqueIdentifier>{831220a2-a861-49a8-a290-74336ac5398d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="gamesystem\actor\Five">
+      <UniqueIdentifier>{5173ded3-c5fb-4587-823c-2a2d51a18860}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="gamesystem\scene\Six">
+      <UniqueIdentifier>{aa3aa91f-7e77-45a6-a95b-ebb4ae1db898}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
