--- a/imgui.ini
+++ b/imgui.ini
@@ -228,3 +228,13 @@ Pos=52,21
 Size=248,370
 Collapsed=0
 
+[Window][Seven]
+Pos=60,60
+Size=129,118
+Collapsed=0
+
+[Window][Polter]
+Pos=211,165
+Size=248,247
+Collapsed=0
+
